--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<input type="text" (keyup)="getTextMsg($event)"/>
+<input type="text" placeholder="write anything" (keyup)="getTextMsg($event)"/>
 
 <h3>{{textMsg}}</h3>
 
